# MemorizedScatterOp

./: CMakeLists.txt  MyScatterNode.cpp  pyproject.toml  setup.py
scripts/: profile_scatter.py  test_scatter.py
